# driftpy

./: .bumpversion.cfg  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .python-version  404.html  CHANGELOG.md  Makefile  README.md  acceptance_test.sh  auto_types.py  driftfunctions.py  handover_notes.md  index.html  mkdocs.yml  new_release.py  noxfile.py  objects.inv  oracle.sh  parse_idl.py  prelaunch.sh  pyproject.toml  requirements.txt  scrape.py  search.html  setup.sh  sitemap.xml  test.sh  tmp.py  update_idl.sh
.github/workflows/: docs.yml  main.yml  release.yml  tests.yml
accounts/: index.html
addresses/: index.html
api_reference/: index.html
clearing_house/: index.html
clearing_house_user/: index.html
docs/: accounts.md  addresses.md  api_reference.md  clearing_house.md  clearing_house_user.md  index.md
examples/: authority_user-account_lookup.py  check_pyth_lazer.py  deposit_and_withdraw.py  driftpy-enhanced-usermap.py  driftpy-marketmap-details.py  dump_pickle.py  example_grpc_log_provider.py  fetch_all_markets.py  floating_maker.py  get_all_users_pnl.py  get_borrows.py  get_deposits.py  get_funding.py  get_oracle_devnet.py  get_vault_metrics.py  get_vault_pubkeys.py  grpc_auction.py  grpc_client.py  high_leverage_users.py  if_stake.py  jit_maker_grpc.py  limit_order_grid.py  minimal_maker.py  oracle_maker.py  oracle_place_and_take.py  orders_subcribe.py  place_and_take.py  place_order.py  pmm_users.py  post_only_oracle_limit_anon.py  protected_order.py  readme.md  send_indicative_quotes.py  settle_lp_loop.py  settle_pnl.py  signed_msg_subscribe.py  spot_market_trade.py  start_if_stake.py  start_lp.py  swift_maker.py  (+7 more)
scripts/: bump.py  ci.sh  decode.sh  dlob.sh  generate_constants.py  math.sh
search/: search_index.json
src/: clearing_house.py
src/driftpy/: __init__.py  _types.py  account_subscription_config.py  accounts.py  address_lookup_table.py  addresses.py  admin.py  clearing_house.py  clearing_house_user.py  drift_client.py  drift_user.py  drift_user_stats.py  keypair.py  memcmp.py  name.py  program.py  sdk_types.py  test_client.py  types.py
src/driftpy/accounts/: __init__.py  bulk_account_loader.py  get_accounts.py  oracle.py  test_bulk_account_loader.py  types.py
src/driftpy/auction_subscriber/: auction_subscriber.py  grpc_auction_subscriber.py  types.py
src/driftpy/constants/: __init__.py  banks.py  config.py  markets.py  numeric_constants.py  perp_markets.py  spot_markets.py  vaults.py
src/driftpy/decode/: pull_oracle.py  signed_msg_order.py  swift_order.py  user.py  user_stat.py  utils.py
src/driftpy/dlob/: DLOB.py  DLOB_generators.py  DLOB_helpers.py  DLOB_node.py  DLOB_orders.py  client_types.py  dlob.py  dlob_client.py  dlob_helpers.py  dlob_node.py  dlob_subscriber.py  node_list.py  orderbook_levels.py  types.py
src/driftpy/enforcers/: position_enforcer.py  sequence_enforcer.py
src/driftpy/events/: event_list.py  event_subscriber.py  fetch_logs.py  grpc_log_provider.py  parse.py  polling_log_provider.py  sort.py  tx_event_cache.py  types.py  websocket_log_provider.py
src/driftpy/idl/: clearing_house.json  drift.json  drift_vaults.json  mock_usdc_faucet.json  pyth.json  sequence_enforcer.json  switchboard.json  token_faucet.json
src/driftpy/indicative_quotes/: __init__.py  indicative_quotes_sender.py
src/driftpy/market_map/: grpc_market_map.py  grpc_sub.py  market_map.py  market_map_config.py  websocket_sub.py
src/driftpy/math/: amm.py  auction.py  bankruptcy.py  conversion.py  exchange_status.py  fuel.py  funding.py  margin.py  market.py  oracle.py  oracles.py  orders.py  perp_position.py  positions.py  repeg.py  spot_balance.py  spot_market.py  spot_position.py  tiers.py  trade.py  user.py  user_status.py  utils.py
src/driftpy/oracles/: oracle_id.py  strict_oracle_price.py
src/driftpy/pickle/: vat.py
src/driftpy/priority_fees/: priority_fee_subscriber.py
src/driftpy/setup/: helpers.py
src/driftpy/signed_msg/: create_verify_ix.py  order_subscriber.py
src/driftpy/slot/: slot_subscriber.py
src/driftpy/swift/: create_verify_ix.py  order_subscriber.py  util.py
src/driftpy/tx/: fast_tx_sender.py  jito_subscriber.py  jito_tx_sender.py  standard_tx_sender.py  types.py  while_valid_tx_sender.py
src/driftpy/user_map/: cached_sub.py  polling_sub.py  referrer_map.py  types.py  user_map.py  user_map_config.py  user_stats_map.py  userstats_map.py  websocket_sub.py
src/driftpy/vaults/: __init__.py  (+2 more)
tests/: _fixtures.py  acceptance_test.py  amm.py  cached_subscriber.py  conftest.py  decode.py  decode_stat.py  decode_strings.py  dlob.py  dlob_test_constants.py  dlob_test_helpers.py  events_parser.py  helpers.py  market_order_test.py  oracle.py  prelaunch.py  test.py  test_clearing_house.py  test_oracle_diff_sources.py
tests/ci/: devnet.py  mainnet.py
tests/decode/: decode.py  decode_stat.py  decode_strings.py  dlob_test_helpers.py  stat_decode_strings.py
tests/dlob/: dlob.py
tests/integration/: events_parser.py  liq.py  oracle.py  prelaunch.py  swb_on_demand.py  test_oracle_diff_sources.py
tests/math/: amm.py  auction.py  funding.py  helpers.py  insurance.py  liq.py  spot.py  spreads.py  user.py
tests/unit/: test_clearing_house.py
tests/user/: helpers.py  user.py
v2tests/: conftest.py  test.py
(+27 files in other folders)
