[tool.poetry]
name = "driftpy"
version = "0.6.29"
description = "A Python client for the Drift DEX"
authors = ["x19 <https://twitter.com/0xNineteen@gmail.com>", "Zane <zane@lunoho.company>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/drift-labs/driftpy"
documentation = "https://drift-labs.github.io/driftpy/"

[tool.poetry.dependencies]
python = "^3.10"
anchorpy = "0.10.0"
solana = "^0.25.0"
requests = "^2.28.1"
types-requests = "^2.28.9"
mkdocs = "^1.3.0"
pythclient = "=0.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
mypy = "^0.931"
black = "^21.12b0"
pytest-asyncio = "^0.17.2"
mkdocs = "^1.3.0"
mkdocstrings = "^0.17.0"
mkdocs-material = "^8.1.8"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
