[tool.poetry]
name = "driftpy"
version = "0.7.95"
description = "A Python client for the Drift DEX"
authors = [
    "x19 <https://twitter.com/0xNineteen@gmail.com>",
    "bigz <https://twitter.com/bigz_pubkey>",
    "frank <https://twitter.com/soundsonacid>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/drift-labs/driftpy"
documentation = "https://drift-labs.github.io/driftpy/"

[tool.poetry.dependencies]
python = "^3.10"
anchorpy = ">=0.20.1"
solana = ">=0.34.0"
requests = ">=2.28.1"
types-requests = ">=2.28.9"
pythclient = ">=0.1.4"
aiohttp = ">=3.8.3"
anchorpy-core = ">=0.2.0"
base58 = ">=2.1.1"
borsh-construct = ">=0.1.0"
construct = ">=2.10.68"
construct-typing = ">=0.5.3"
jsonrpcclient = ">=4.0.3"
loguru = ">=0.6.0"
py = ">=1.11.0"
solders = ">=0.21.0"
sumtypes = ">=0.1a6"
typing-extensions = ">=4.4.0"
websockets = ">=10.4"
deprecated = ">=1.2.14"
events = ">=0.5"
jito-searcher-client = ">=0.1.4"

[tool.poetry.group.dev.dependencies]
flake8 = "6.0.0"
black = "24.4.2"
mkdocs = "^1.3.0"
mkdocstrings = "^0.17.0"
mkdocs-material = "^8.1.8"
bump2version = "^1.0.1"
autopep8 = "^2.0.4"
mypy = "^1.7.0"
pytest = "^7.4.4"
pytest-asyncio = "0.21.0"
pytest-xprocess = "0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.ruff]
exclude = [".git", "__pycache__", "docs/source/conf.py", "old", "build", "dist"]
[tool.ruff.pycodestyle]
max-line-length = 88
